# pams

./: .buildinfo  .gitignore  .readthedocs.yml  CITATION.cff  LICENSE  Makefile  README.md  genindex.html  index.html  objects.inv  poetry.toml  pyproject.toml  search.html  searchindex.js
.github/workflows/: bump.yml  ci-python-min.yml  ci-python-notebooks.yml  ci-python.yml  codecov.yml  doc.yml  release.yml
_sources/: index.rst.txt
docs/: requirements.txt
docs/source/: _index.html  conf.py  index.rst
docs/source/reference/: agents.rst  events.rst  index.rst  loggers.rst  markets.rst  orders.rst  runners.rst  sessions.rst  simulators.rst
docs/source/templates/: classtemplate.rst
docs/source/user_guide/: about.rst  config.rst  index.rst  (+1 more)
en/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
en/_modules/: index.html
en/_sources/: index.rst.txt
en/reference/: agents.html  events.html  fundamentals.html  index.html  loggers.html  logs.html  markets.html  orders.html  runners.html  sessions.html  simulators.html  utils.html
en/user_guide/: about.html  config.html  index.html  install.html  platform.html  preface.html
examples/: CI2002.ipynb  fat_finger.ipynb  market_share.ipynb  price_limit.ipynb  shock_transfer.ipynb  trading_halt.ipynb
ja/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
ja/_modules/: index.html
ja/_sources/: index.rst.txt
ja/reference/: agents.html  events.html  fundamentals.html  index.html  loggers.html  logs.html  markets.html  orders.html  runners.html  sessions.html  simulators.html  utils.html
ja/user_guide/: about.html  config.html  index.html  install.html  platform.html  preface.html
pams/: __init__.py  agent.py  darkpool_market.py  fundamentals.py  high_frequency_agent.py  index_market.py  logs.py  market.py  order.py  order_book.py  session.py  simulator.py
pams/agents/: __init__.py  arbitrage_agent.py  base.py  darkpool_agent.py  fcn_agent.py  high_frequency_agent.py  market_maker_agent.py  market_share_fcn_agent.py  test_agent.py
pams/events/: __init__.py  base.py  fundamental_price_shock.py  order_mistake_shock.py  price_limit_rule.py  trading_halt_rule.py
pams/logs/: __init__.py  base.py  market_step_loggers.py
pams/runners/: __init__.py  agent_parallel.py  base.py  sequential.py
pams/utils/: __init__.py  class_finder.py  json_extends.py  json_random.py
samples/CI2002/: config.json  main.py
samples/dark_pool/: darkpool_agent.py  darkpool_market.py
samples/fat_finger/: config.json
samples/market_share/: config-02.json  config-mm.json  config.json  main.py  market_share_fcn_agent.py
samples/price_limit/: config.json
samples/shock_transfer/: config.json
samples/test/: config.json  main.py
samples/trading_halt/: config.json  main.py
samples/user_class/: config.json  main.py
tests/pams/: teset_simulator.py  test_fundamentals.py  test_index_market.py  test_market.py  test_order.py  test_order_book.py  test_session.py  test_simulator.py
tests/samples/: test_CI2002.py  test_all.py  test_market_share.py  test_order_mistake_shock.py  test_price_limit.py  test_shock_transfer.py  test_test.py  test_trading_halt.py  test_user_class.py
(+103 files in other folders)
