[tool.poetry]
name = "pams"
version = "0.0.3"
description = "PAMS: Platform for Artificial Market Simulations"
authors = ["Masanori HIRANO <masa.hirano.1996@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
tqdm = "^4.64.1"
numpy = "^1.23.4"
scipy = "^1.9.3"


[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
isort = "^5.10.1"
mypy = "^0.982"
pytest = "^7.1.3"
pytest-cov = "^4.0.0"
Sphinx = "^5.3.0"
furo = "^2022.9.29"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
[tool.black]
skip-magic-trailing-comma = true

[tool.isort]
profile = 'black'
force_single_line = true

[tool.mypy]
disallow_untyped_defs = true
ignore_missing_imports = true
