[tool.poetry]
name = "pams"
version = "0.2.1"
description = "PAMS: Platform for Artificial Market Simulations"
authors = ["Masanori HIRANO <masa.hirano.1996@gmail.com>", "Ryosuke TAKATA <ryos427@yahoo.co.jp>", "Kiyoshi IZUMI"]
license = "epl-1.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8.1"
tqdm = "^4.64.1"
numpy = "^1.23.4"
scipy = "^1.9.2"


[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
isort = "^5.10.1"
mypy = "^0.982"
pytest = "^7.1.3"
pytest-cov = "^4.0.0"
Sphinx = "^5.3.0"
furo = "^2022.9.29"
jupyter = "^1.0.0"
matplotlib = "^3.4.2"
sphinx-intl = "^2.0.1"
sphinx-copybutton = "^0.5.0"
sphinx-autodoc-typehints = "^1.19.5"
flake8 = "^6.0.0"
pyproject-flake8 = "^6.0.0.post1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
[tool.black]
skip-magic-trailing-comma = true

[tool.isort]
profile = 'black'
force_single_line = true
skip = [
    ".git",
    "__pycache__",
    "docs",
    "build",
    "dist",
    "examples",
    ".venv",
    "tests/examples"
]

[tool.mypy]
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.flake8]
ignore = "E203,E231,E501,W503"
max-line-length = 88
exclude = [
    ".git",
    "__pycache__",
    "docs",
    "build",
    "dist",
    "examples",
    ".venv",
    "__init__.py"
    ]
select = "B,B950,C,E,F,W"